--- a/RssFeedApp.Ui/index.html
+++ b/RssFeedApp.Ui/index.html
@@ -11,9 +11,9 @@
 <header class="dark">
     <h1>Trusty</h1>
     <div class="theme-switcher">
-        <label>
-            <input type="checkbox" id="themeToggle"> Light Theme
-        </label>
+        <input type="checkbox" id="themeToggle">
+        <label id="themeLabel" for="themeToggle">Dark</label>
+    </div>
     </div>
 </header>
 <div class="container">
